fix: z-index

--- a/builds/0.1.0/styles.css
+++ b/builds/0.1.0/styles.css
@@ -49,6 +49,7 @@
 }
 
 .ai-chat-window {
+  z-index: 10000;
   outline: 1px solid var(--ai-chat-window-color-outline);
   outline-offset: -1px;
   border-radius: 1rem;
